fixed white space

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,8 +9,12 @@
     box-sizing: inherit;
 }
 
-body {
-    height: 100vh;
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
     font-family: FactoriaBold;
     font-size: 17px;
 }
